DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-20-2002 nonchocoboy The ConfigBroker will now popup a dialog asking the
                        user to choose a destination resource when adding a new
                        ConfigChunk or ChunkDesc if there is more than one
                        valid resource in the active context.
                        NEW VERSION: 0.8.1
Aug-19-2002 nonchocoboy Fleshed out the browse tab of the ChunkDescChooser.
Aug-15-2002 nonchocoboy Integated editors with the ConfigBroker and contexts.
                        NEW VERSION: 0.8.0
Aug-15-2002 nonchocoboy Added ability to add new values to properties with
                        variable-length values.
Aug-14-2002 nonchocoboy Introduced the concept of a configuration context which
                        provides a view into a subset of the open files which
                        together make up a configuration.
Aug-09-2002 patrickh    Made compilation of the C++ remote reconfiguration code
                        optional.
Aug-06-2002 patrickh    Developer installations are now constructed using the
                        standard installation targets.
Aug-02-2002 jahare      Initial version of the new C++ remote reconfiguration
                        code added.
Jul-30-2002 nonchocoboy Added ConfigBroker Tweek service to be the intermediary
                        between a view unto a configuration and the files that
                        make up that configuration.
Jul-16-2002 nonchocoboy Merged changes from jccl_tweek_conversion2_branch.
                        New ChunkDescDB editor Tweek bean created. VjControl
                        is now dead. The VRJConfig Tweek bean in the vrjuggler
                        project replaces it using the generic editing
                        components provided by JCCL.
                        NEW VERSION: 0.5.0